# Racoon_Works_Storm_Hacks2025

./: .gitignore  ALGORITHM_DESIGN.md  CMakeCache.txt  CMakeLists.txt  CMakeLists_no_gurobi.txt  CMakeLists_simple.txt  EXAMPLE_ANALYSIS.md  Makefile  README.md  baseline  build.sh  cmake_install.cmake  sample.txt  scheduler
Visualization/: README.md  SimpleDAGVisualizer.cpp  SimpleDAGVisualizer.h
include/: model.hpp  node.hpp  parser.hpp  scheduler.hpp
input/: example1.txt  example2.txt  example3.txt  example4.txt
output/: example1.dot  example1_summary.txt  example1_timeline.txt  example2.dot  example2_summary.txt  example2_timeline.txt
src/: baseline.cpp  main.cpp  node.cpp  parser.cpp  scheduler copy.cpp.backup  scheduler.cpp  test_parser.cpp
